@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.23.
-.TH GRUB-INSTALL "8" "March 2002" "grub-install (GNU GRUB 0.92)" FSF
+.TH GRUB-INSTALL "8" "April 2002" "grub-install (GNU GRUB 0.92)" FSF
 .SH NAME
 grub-install \- install GRUB on your drive
 .SH SYNOPSIS
